<resources>
    <string name="app_name">Lokakar</string>
    <string name="title_activity_login">Se connecter a Lokakar</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="action_sign_in">Se connecter</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Email invalide</string>
    <string name="error_invalid_password">Mot de passe trop court</string>
    <string name="error_incorrect_password">Mot de passe incorrecte</string>
    <string name="error_field_required">Champ requis</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="volkswagen_scirocco_2_0_tsi">Volkswagen Scirocco</string>
    <string name="modifier">Éditer</string>
    <string name="supprimer">Archiver</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="resume">Résumé</string>
</resources>
