<?xml version="1.0" encoding="utf-8"?>
<com.daimajia.swipe.SwipeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:orientation="vertical">

    <!-- Bottom View Start-->
    <LinearLayout
        android:id="@+id/bottom_wrapper"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <!--What you want to show-->
        <Button
            android:id="@+id/buttonModify"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#2094f1"
            android:onClick="edit"
            android:text="@string/modifier"
            android:textColor="#FFF" />

        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#f34236"
            android:onClick="delete"
            android:text="@string/supprimer"
            android:textColor="#FFF" />
    </LinearLayout>
    <!-- Bottom View End-->

    <!-- Surface View Start -->
    <LinearLayout
        android:id="@+id/fond"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fde83b"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="64dp"
            android:layout_height="48dp">

            <ImageView
                android:layout_marginLeft="10dp"
                android:id="@+id/thumbnail"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_citroen_c3_1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="8dp"
            android:paddingTop="2dp"
            android:layout_weight=".34">

            <TextView
                android:id="@+id/modele_vehicule"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/volkswagen_scirocco_2_0_tsi"
                android:textSize="20sp"
                android:textColor="#230A0A"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/immatriculation_vehicule"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="AB-344-CA"
                    android:textColor="#230A0A"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/vehiculeUtilisation"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="#230A0A"
                    android:typeface="monospace"
                    android:text="-F--R-"
                    android:layout_weight="1"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tarif_vehicule"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:typeface="monospace"
                    android:textColor="#230A0A"
                    android:text="85€/j"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:layout_weight="1">
            <Button
                android:id="@+id/pellet"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@drawable/pellet_green"
                android:text="88"
                android:textColor="#303"/>
        </LinearLayout>

    </LinearLayout>

    <!-- Surface View End -->

</com.daimajia.swipe.SwipeLayout>